SigmaCodebackup3rdSep/objects/Site_Visits__c.object
<CustomObject>
    <fields>
        <fullName>Break_Time_In_minutes__c</fullName>
        <label>Break Time(In minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Check_In_DateTime__c</fullName>
        <label>Check-In DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Check_In_Location__c</fullName>
        <label>Check-In Location</label>
        <scale>15</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Check_Out_Date_Time__c</fullName>
        <label>Check-Out Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Check_Out_Location__c</fullName>
        <label>Check-Out Location</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Preferred_Service_Date_Time__c</fullName>
        <label>Preferred Service Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Service_Appointments__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Appointments</label>
        <referenceTo>Service_Appointments__c</referenceTo>
        <relationshipLabel>Site Visits</relationshipLabel>
        <relationshipName>Site_Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Date__c</fullName>
        <label>Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>Work_Order__c</referenceTo>
        <relationshipLabel>Site Visits</relationshipLabel>
        <relationshipName>Site_Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Site Visits</label>
    <nameField>
        <displayFormat>SV-{0000}</displayFormat>
        <label>Site Visit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Visits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>